2009-03-10  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Try again up to 3 times when a checkout/update fails, just in case
	it's short temporary network problem.
	
2009-03-10  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Execute all commands with the C locale.
	
2009-03-10  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/DBTempLog.py:

	Add a flag to make sure we don't try to drop the temp table more
	than once.
	
2009-03-10  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Handle exceptions when running sloccount to create the FileMetrics
	object, skipping the file if something went wrong.
	
2009-03-05  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* help/doc/cvsanaly.texi:

	Start documenting the database design.
	
2009-03-05  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/Database.py:

	Remove file_id and commit_id from the promary key of the actions
	table.
	
2009-03-05  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/main.py:

	Remove trailing '/' of the given uri.
	
2009-03-04  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Do not find programs in PATH more than once.
	
2009-03-04  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Handle Command exceptions due to problems when running commands.
	
2009-03-04  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/Command.py:

	Updated from misc. Several error handling improvements.
	
2009-03-04  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Skip files that are out of the repository root.
	
2009-03-04  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/Command.py:
	* pycvsanaly2/extensions/Metrics.py:

	Add Commands module from misc, and use it in Metrics extension
	instead of the commands module.
	
2009-03-04  Carlos Garcia Campos  <carlosgc@gsyc.es>
